<resources>
    <string name="app_name">Desafio2DSM</string>
    <string name="TxtLogin">BIENVENIDO</string>
    <string name="ingresarDatos">Ingresa tus Datos</string>
    <string name="inputCorreo">Ingresar tu Correo</string>
    <string name="inputContra">Ingresar tu Contraseña</string>
    <string name="btnLogin">INGRESAR</string>
    <string name="btnRegistro">CREAR CUENTA</string>
    <string name="txtLogin02">---- O ----</string>
    <string name="txtRegister">Creacion de usuario</string>

    <string name="txtMenu">Que deseas Comprar?</string>

    <string name="txtMenu01">Opciones Disponibles</string>

    <string name="comidas">COMIDAS</string>
    <string name="bebidas">BEBIDAS</string>
    <string name="ordenes">ORDENES</string>

    <string name="txtCarrito">Hacer Pedido</string>

    <string name="txtCarrito01">BORRAR</string>


    <string name="ordenes01">HISTORIAL DE ORDENES</string>
</resources>